# DTeam-django-test

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
api/tests/: test_views.py
audit/: admin.py  middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: recent_requests.html
audit/tests/: test_views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fixtures/: initial_data.json
main/: admin.py  context_processors.py  models.py  services.py  tasks.py  urls.py  views.py
main/fixtures/: initial_data.json
main/migrations/: 0001_initial.py  0002_alter_skill_unique_together_cv_skills_and_more.py  0003_alter_skill_unique_together_remove_skill_level.py
main/templates/main/: base.html  cv_detail.html  cv_list.html  detailed_settings.html  email_cv_template.txt  settings.html
main/templates/main/pdf/: cv.html
main/tests/: test_views.py
