[project]
name = "cvproject"
version = "0.1.0"
description = ""
authors = [
    {name = "GreenApple131",email = "dmytro.luts131@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "weasyprint==65.1",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "gunicorn==23.0.0",
    "whitenoise==6.9.0",
]

[tool.poetry]
# packages = [{include = "cvproject"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
