[project]
name = "cvproject"
version = "0.1.0"
description = "CV Project Django Application"
authors = [
    {name = "GreenApple131",email = "dmytro.luts131@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "weasyprint==65.1",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "gunicorn==23.0.0",
    "whitenoise==6.9.0",
    "tinyhtml5==2.0.0",
    "tinycss2==1.4.0",
    "celery==5.5.3",
    "redis==6.2.0",
    "reportlab==4.4.3",
    "django-celery-beat==2.8.1",
    "openai==1.97.1",
]

[tool.poetry]
# packages = [{include = "cvproject"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["migrations"]
